# urkaos

./: Cargo.toml
assets/shaders/: organism_shader.wgsl
src/: compute.wgsl  config.rs  constants.rs  main.rs  renderer.rs  shader.wgsl  simulation.rs  upscale.wgsl  utils.rs
